// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaPollToggle (flag) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`MetaPollToggle (flag) should match snapshot (toggled 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="fas fa-flag"
  />
</button>
`;

exports[`MetaPollToggle (flag) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-flag u-meta"
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`MetaPollToggle (hide) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;

exports[`MetaPollToggle (hide) should match snapshot (toggled 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye-slash"
  />
</button>
`;

exports[`MetaPollToggle (hide) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-hide u-meta"
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;
